--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-remark-autolink-headers": "^2.0.12",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-responsive-iframe": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-remark": "^2.1.17",
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
